baspage et un peu de style
j'ai enlevé les points de la liste à gauche et j'ai ajouté une ligne en bas de la page avec nos noms, en plus j'ai changé un peu le grid

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     </div>
         
         </main>
+    <div class="baspage">Marie-Rose Chabot et Tymofii Niemchenko</div>
     </div>
   </body>
 </html>
