--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
     <div class="conteneur">
         <header class="zone-page entete">
-        <img src="./images/logo.jpg" alt="en-tete">
+        <img src="./images/game-controller.png" alt="en-tete">
         <a href="index.html?authentification">Autenthification</a>
 
         </header>
