liste de plateformes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                 <h2>Elden Ring</h2>
                 <img src="./images/elden_ring.jpeg" />
             <div class="plateformes">
-                <img src="./images/xbox.png" />
+                <img src="./images/desktop.png" />
+                <img src="./images/ps4.png"/>
+                <img src="./images/xbox.png"/>
             </div>
             </article>
 
@@ -71,7 +73,9 @@
                 <h2>Fifa</h2>
                 <img src="./images/fifa.jpg" />
                 <div class="plateformes">
-                <img src="./images/ps4.png" />
+                    <img src="./images/desktop.png" />
+                    <img src="./images/ps4.png"/>
+                    <img src="./images/xbox.png"/>
             </div>
             </article>
 
@@ -79,7 +83,9 @@
                 <h2>Nhl</h2>
                 <img src="./images/nhl.jpg" />
                 <div class="plateformes">
-                <img src="./images/ps4.png" />
+                    <img src="./images/desktop.png" />
+                    <img src="./images/ps4.png"/>
+                    <img src="./images/xbox.png"/>
             </div>
         </article>
 
@@ -88,6 +94,8 @@
                 <img src="./images/civilization.jpg" />
                 <div class="plateformes">
                 <img src="./images/desktop.png" />
+                <img src="./images/ps4.png"/>
+                <img src="./images/xbox.png"/>
             
             </div>
         </article>
@@ -116,8 +124,10 @@
             <h2>Minecraft</h2>    
             <img src="./images/minecraft.jpeg" />
                 <div class="plateformes">
-                <img src="./images/ps4.png" />
-            
+                    <img src="./images/desktop.png" />
+                    <img src="./images/ps4.png"/>
+                    <img src="./images/xbox.png"/>
+                    <img src="./images/nintendo-switch.png"/>
             </div>
         </article>
 
@@ -135,7 +145,9 @@
             <h2>Lego</h2>    
             <img src="./images/lego.webp" />
                 <div class="plateformes">
-                <img src="./images/xbox.png" />
+                    <img src="./images/desktop.png" />
+                    <img src="./images/ps4.png"/>
+                    <img src="./images/xbox.png"/>
             </div>
         </article>
     </div>
