--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="index.html?authentification">Autenthification</a>
 
         </header>
-        <nav class="categorie">
+        <nav>
         
 		
         </nav>
